# llm

./: .gitignore  colab_runner.ipynb  inference.ipynb  main.py  pyproject.toml
attention/: causal.py
dataloaders/: __init__.py  tiny_shakespeare.py  tiny_stories.py
experiments/: infer_gpt.py  train_gpt.py  train_modern.py
inference/: generator.py
models/: gpt.py  modern.py
modules/activations/: swiglu.py
modules/embeddings/: rope.py
tokenizers/: __init__.py  base.py  character.py  tiktoken.py
training/: trainer.py
