[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.0",
    "tiktoken>=0.7.0",
    "wandb>=0.17.0",
    "numpy>=1.26.0,<2.0.0",
    "tqdm>=4.66.0",
    "datasets>=2.14.0",
]

[project.scripts]
exp = "main:main"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.setuptools]
py-modules = ["main"]
packages = ["experiments", "models", "training", "attention", "tokenizers", "dataloaders"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
